# ability-hand-api

./: .gitignore  LICENSE  README  README.md
Arduino/: examplecode.ino
MATLAB/: ability_hand.urdf  get_abh_4bar_driven_angle.m  get_intersection_circles.m  urdf_demo.m
URDF/: README.md  ability_hand.urdf  ability_hand_left.urdf  ability_hand_left_large.urdf  ability_hand_left_small.urdf  ability_hand_right.urdf  ability_hand_right_large.urdf  ability_hand_right_large_no_fsr.urdf  ability_hand_right_small.urdf  fsrlocs_to_xml.py  small_fsrlocs_to_xml_left.py  write_fsrlocs_to_xml.py
cpp/: .gitignore  .reformat.sh  CMakeLists.txt  LICENSE  README.md  hand_wave.cpp  main.cpp
cpp/ah_wrapper/: CMakeLists.txt
cpp/ah_wrapper/include/: api.h  hand.h  linux_serial.h  parser.h  ppp.h  serial_helper.h  winserial.h  wrapper.h
cpp/ah_wrapper/src/: api.cpp  hand.cpp  linux_serial.cpp  parser.cpp  ppp.cpp  serial_helper.cpp  winserial.cpp  wrapper.cpp
demo/: Makefile  datalog.csv  demo.out  i2c-err-lookup.c  i2c-err-lookup.h  i2c-master-test.c  i2c-master-test.h  m_mcpy.c  m_mcpy.h  main.c
python/: .gitignore  .reformat.sh  AbilityHandClient.py  AbilityHandSerialClient.py  CHANGELOG.md  ClientTest.py  Combobox_Defines.py  Hability_Hand_Class.py  Main_Loop.py  PPP_stuffing.py  README  README.md  SerialForward.py  SerialForwarder.py  Serial_Loop.py  ServerTest.py  abh_api_core.py  abh_comms_ppp.py  config.py  disable_ble.py  example_current_allserial.py  example_grips_allserial.py  example_position.py  example_position_allserial.py  example_velocity_allserial.py  (+22 more)
(+151 files in other folders)
